crates/pardosa-schema/tests/compile_fail/evt_013.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    f: fn(u32) -> u32,
}
fn main() {}
